...
        homeViewController.viewModel = HomeViewModel()
        
        let favoriteViewController = FavoriteViewController()
        favoriteViewController.viewModel = FavoriteViewModel()
        
        viewControllers = [
            createViewController(rootViewController: homeViewController,title: "Games", imageName: "gamecontroller.fill"),
            createViewController(rootViewController: favoriteViewController, title: "Favorites",imageName: "heart.fill")
        ]
       
    }
    
    private func createViewController(rootViewController: UIViewController,title:String, imageName: String) -> UINavigationController {
        rootViewController.title = title
...
