...
        viewModel.fetchFavoriteGames()
    }

//    @objc private func deleteAllFavoritesTapped() {
//        let alertController = UIAlertController(title: "Are you sure you want to delete all your favorite games?", message: nil, preferredStyle: .actionSheet)
//
//        let deleteAction = UIAlertAction(title: "Yes", style: .destructive) { [weak self] _ in
//            self?.viewModel.deleteAllFavoriteGames()
//        }
//
//        let cancelAction = UIAlertAction(title: "Cancel", style: .cancel, handler: nil)
//
//        alertController.addAction(deleteAction)
...
