...

        let textField = searchController.searchBar.searchTextField
        let attributes: [NSAttributedString.Key: Any] = [
            .foregroundColor: UIColor.white,
            .font: UIFont.systemFont(ofSize: 16)
        ]
        textField.attributedPlaceholder = NSAttributedString(string: "Find Popular Games...", attributes: attributes)
        textField.textColor = .white
        if let glassIconView = textField.leftView as? UIImageView {
            glassIconView.tintColor = .white
        }
    }
}
...
