//
//  PopularGamesAPPUITests.swift
//  PopularGamesAPPUITests
//
//  Created by Asude Nisa Tıraş on 14.07.2023.
//

import XCTest

final class PopularGamesAPPUITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testExample() throws {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()

        // Use XCTAssert and related functions to verify your tests produce the correct results.
    }

    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, watchOS 7.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTApplicationLaunchMetric()]) {
                XCUIApplication().launch()
            }
        }
    }
    func testExampleControl(){
        
        let app = XCUIApplication()
        app.launch()
        let collectionViewsQuery = app.collectionViews
        app.collectionViews.children(matching: .cell).element(boundBy: 0).children(matching: .other).element.children(matching: .other).element.tap()
        
        let gamesNavigationBar = app.navigationBars["Games"]
        let loveButton = gamesNavigationBar.buttons["love"]
        loveButton.tap()
        
        let yesButton = app/*@START_MENU_TOKEN@*/.scrollViews/*[[".otherElements[\"Favorite Updates\"].scrollViews",".scrollViews"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.otherElements.buttons["Yes"]
        yesButton.tap()
        loveButton.tap()
        yesButton.tap()
        
        let gamesButton = gamesNavigationBar.buttons["Games"]
        gamesButton.tap()
        collectionViewsQuery/*@START_MENU_TOKEN@*/.staticTexts["Counter-Strike: Global Offensive"]/*[[".cells.staticTexts[\"Counter-Strike: Global Offensive\"]",".staticTexts[\"Counter-Strike: Global Offensive\"]"],[[[-1,1],[-1,0]]],[0]]@END_MENU_TOKEN@*/.tap()
        gamesButton.tap()
        app.scrollViews.children(matching: .other).element.children(matching: .other).element.tap()
        gamesButton.tap()
        gamesNavigationBar.searchFields["Find Popular Games..."].tap()
        app.tabBars["Tab Bar"].buttons["Favorites"].tap()
        
        let favoritesNavigationBar = app.navigationBars["Favorites"]
        
    }
}
